// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup/> handles onChange 1`] = `
<div
  className="RadioGroupStyled-kNRzEK kZRQMc"
>
  <div
    className="RadioStyled-eQuyp hslbtC"
  >
    <input
      checked={false}
      disabled={false}
      id="radio-0"
      onChange={[Function]}
      tabIndex="0"
      type="radio"
    />
    <label
      checked={false}
      className="RadioLabelStyled-gubAjK jXxyaE"
      disabled={false}
      htmlFor="radio-0"
    >
      value1
    </label>
  </div>
</div>
`;

exports[`<RadioGroup/> handles onChange 2`] = `
<div
  className="RadioGroupStyled-kNRzEK kZRQMc"
>
  <div
    className="RadioStyled-eQuyp hslbtC"
  >
    <input
      checked={true}
      disabled={false}
      id="radio-0"
      onChange={[Function]}
      tabIndex="0"
      type="radio"
    />
    <label
      checked={true}
      className="RadioLabelStyled-gubAjK kvXMlP"
      disabled={false}
      htmlFor="radio-0"
    >
      value1
    </label>
  </div>
</div>
`;

exports[`<RadioGroup/> handles props change 1`] = `
<div
  className="RadioGroupStyled-kNRzEK kZRQMc"
/>
`;

exports[`<RadioGroup/> handles props change 2`] = `
<div
  className="RadioGroupStyled-kNRzEK kZRQMc"
/>
`;

exports[`<RadioGroup/> renders correctly with default props 1`] = `
<div
  className="RadioGroupStyled-kNRzEK kZRQMc"
/>
`;
